tests/runnable/test_02_bare.ul
// test 2 : The most bare, valid program.
// Parser / Lexer Valid: Yes

void main() {;}// random comment