tests/invalid/test_32_missing_semicolon.ul
// test 32 : The most bare, valid program.
// Parser / Lexer Valid: Yes

int main() 
{
    return 3
}